src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
}
html {
  margin: 0;
  padding: 0;
  /* overflow-x: hidden; */
  scroll-behavior: smooth;
}
body {
  scroll-behavior: smooth;
  background-color: #161818;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  width: 100%;
}
.sticky-container {
  height: 5rem;
  z-index: 100;
}
.bggrad1 {
  position: absolute;
  width: 105px;
  height: 105px;
  border-radius: 100%;
  top: 28.8%;
  left: 30.5%;
  background: linear-gradient(180deg, #b7b9b593, #4f4b4bdd, #161616c2);
  box-shadow: 0px 6px 3.9px 0px rgba(255, 255, 255, 0.53) inset;
  opacity: 0.9;
  cursor: pointer;
}

@media (max-width: 670px) {
  .bggrad1 {
    height: 85px;
    width: 85px;
    top: 32.8%;
    left: 25.21%;
  }
}

@media (max-width: 410px) {
  .bggrad1 {
    top: -10%;
  }
}
/* start */
.nav {
  display: flex;
  justify-content: center;
  width: 100%;
  position: sticky;
  top: 3vh;
  cursor: default;
  background: transparent;
  z-index: 100;
  border-radius: 50vh;
}

#linker,
#links,
#link1,
#link2,
#link3,
#greet,
#downloadResume {
  z-index: 100;
}

.wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100vh;
  width: max-content;
  margin-top: 2vh;
  border: solid rgba(255, 255, 255, 0.3);
  background: transparent;
  transform: scale(0.7);
  cursor: default;
  z-index: 100;
}

label {
  background: transparent;
  position: relative;
  text-align: center;
  text-decoration: none;
  font-size: 1.5rem;
  color: hsl(0 0% 100% / 0.7);
  padding: 0.8rem 2rem;
  border-radius: 100vh;
  cursor: pointer;
  opacity: 1;
  transition: background 0.5s ease-in-out, color 0.5s ease-in-out,
    transform 0.2s ease;
}

label::before {
  content: "";
  position: absolute;
  height: 0.25rem;
  width: 50%;
  opacity: 200;
  top: 0;
  left: 50%;
  transform: translateX(-50%) scaleX(0);
  border-radius: 100vh;
  opacity: 1;
  background: hsl(0 0% 100%);
  box-shadow: 0 0 1.5rem 2px white, 0 4px 1rem 1px white;
  transition: transform 0.3s ease;
  backdrop-filter: blur(15px);
}

input:checked + label::before {
  transform: translateX(-50%) scaleX(1);
}

input:checked + label {
  background: hsl(195 4% 20% / 1);
  color: hsl(0 0% 100%);
  transform: scale(1.1);
}

label:nth-of-type(1)::before {
  transform-origin: right;
}
label:nth-of-type(2)::before {
  transform-origin: left;
}

#tabsHolder {
  /* background: hsl(210, 9%, 0.6); */
  backdrop-filter: blur(10px);
  opacity: 1;
  padding: 0.8rem 1.2rem;
  border-radius: 120vh;
  display: flex;
  gap: 1.5rem;
  scale: 1;
  cursor: default;
  z-index: 100;
}

input {
  display: none;
  cursor: pointer;
  opacity: 1;
  /* backdrop-filter: blur(10px); */
}

/* end */

.image-container {
  position: relative;
  display: inline-block;
}

.image-container img {
  display: block;
}

.image-container::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.848));
  border-radius: 25px;
  pointer-events: none;
}

@media (max-width: 670px) {
  .image-container::after {
    scale: 0.75;
  }
}

/* scroll bar */

::-webkit-scrollbar {
  width: 12px;
  height: 12px;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: #000000;
  border-radius: 50px;
}

::-webkit-scrollbar-thumb:hover {
  background: transparent;
}

html {
  scrollbar-width: thin;
  scrollbar-color: #ffffff5d transparent;
  scroll-behavior: smooth;
}

body {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

